feat(api): serve link statistics
